--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-JINA_API_KEY=
+OPENAI API KEY=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
